margin fixes and textarea output whitespace display

--- a/src/pages/ControlTests.scss
+++ b/src/pages/ControlTests.scss
@@ -3,7 +3,7 @@
 	// so that cells are aligned vertically center within rows
 	display: flex;
 	align-items: center;
-	margin-bottom: 0.5rem;
+	margin: 1rem 0;
 
 	.control-cell {
 		// little bit of horizontal margin
